delet files functions

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,7 @@
 {
   "projects": {
-    "default": "exambank-da88a"
-  }
+    "default": "exam-bank-3b696"
+  },
+  "targets": {},
+  "etags": {}
 }
