--- a/package.json
+++ b/package.json
@@ -15,17 +15,19 @@
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
     "firebase": "^12.7.0",
+    "firebase-admin": "^13.6.0",
+    "firebase-functions": "^7.0.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@types/node": "^24.10.1",
+    "@types/node": "^24.10.9",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
-    "eslint": "^9.39.1",
+    "eslint": "^9.39.2",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
